# viterbox-tts

./: .gitignore  CLAUDE.md  README.md  README_HF.md  app.py  inference.py  pyproject.toml  requirements.txt  run_server.sh
notebooks/: run_servers.ipynb
openai_server/: custom_speaker_manager.py  multi_speaker_inference.py  sentence.py  soundtrack_manager.py  speaker_registry.py  tagged_tts.py  tagged_tts_example.txt  tagged_tts_server.py  text_parser.py  tts_server.py
speakers/: speaker_stats.json
viterbox/: tts.py
viterbox/models/s3gen/: s3gen.py
viterbox/models/t3/: t3.py
viterbox/models/t3/inference/: alignment_stream_analyzer.py
viterbox/utils/: vietnamese.py
