[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viterbox"
version = "1.0.0"
description = "Vietnamese Text-to-Speech based on Chatterbox"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dolly VN"}
]
keywords = ["tts", "text-to-speech", "vietnamese", "voice-cloning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.20.0",
    "tokenizers>=0.15.0",
    "transformers>=4.36.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "conformer>=0.3.2",
    "soe-vinorm>=0.3.2",
]

[project.optional-dependencies]
ui = ["gradio>=4.0.0"]

[project.scripts]
viterbox = "inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["viterbox*"]
